// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component renders correctly when no variant is provided 1`] = `
<div>
  <div
    class="relative h-0.5 w-full bg-divider-gradient"
    data-testid="external-link"
    role="separator"
  >
    <span
      class="absolute inset-0 h-full w-full divider-stripes-8"
    />
  </div>
</div>
`;

exports[`Divider Component renders correctly with gradient variant 1`] = `
<div>
  <div
    class="relative h-0.5 w-full bg-divider-gradient"
    data-testid="external-link"
    role="separator"
  >
    <span
      class="absolute inset-0 h-full w-full divider-stripes-8"
    />
  </div>
</div>
`;

exports[`Divider Component renders correctly with grey variant 1`] = `
<div>
  <div
    class="relative h-0.5 w-full bg-divider-grey"
    data-testid="external-link"
    role="separator"
  >
    <span
      class="absolute inset-0 h-full w-full divider-stripes-4"
    />
  </div>
</div>
`;
